--- a/animation/index.html
+++ b/animation/index.html
@@ -14,7 +14,10 @@
   <div class="nav">
     <h3><a href="../index.html">Home</a> | <a href="../video/index.html">Video</a> | <a href="index.html">Animation</a> </h3>
   </div>
-  <div class="content">Hello World!</div>
+  <div class="content">
+	  <h1>Walk Cycle</h1>
+	  <img src="WalkCycle.jpg" alt="Italian Trulli">
+	</div>
   <div class="footer">
     <h4>About Me | Contact | Copyright 2021</h4>
   </div>
