--- a/animation/index.html
+++ b/animation/index.html
@@ -16,7 +16,7 @@
   </div>
   <div class="content">
 	  <h1>Walk Cycle</h1>
-	  <img src="WalkCycle.jpg" alt="Italian Trulli">
+	  <img src="WalkCycle.jpeg" alt="Walk Cycle">
 	</div>
   <div class="footer">
     <h4>About Me | Contact | Copyright 2021</h4>
