--- a/animation/index.html
+++ b/animation/index.html
@@ -17,6 +17,7 @@
   <div class="content">
 	  <h1>Walk Cycle</h1>
 	  <img src="WalkCycle.jpeg" alt="Walk Cycle">
+	  <a href="https://www.w3schools.com/">Visit W3Schools.com!</a>
 	</div>
   <div class="footer">
     <h4>About Me | Contact | Copyright 2021</h4>
