--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <div class="nav">
     <h3><a href="index.html">Home</a> | <a href="video/index.html">Video</a> | <a href="animation/index.html">Animation</a> </h3>
   </div>
-	<img src="pexels-miguel-á-padriñán-2882688.jpg" alt="Welcome Image" style="width:1400px;height:800px;">
+	<img src="pexels-miguel-á-padriñán-2882688.jpg" alt="Welcome Image" style="width:800px;">
   <div class="content">Hello World!</div>
   <div class="footer">
     <h4>About Me | Contact | Copyright 2021</h4>
