--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <div class="nav">
     <h3><a href="index.html">Home</a> | <a href="video/index.html">Video</a> | <a href="animation/index.html">Animation</a> </h3>
   </div>
-	<img src="pexels-alleksana-7430711.jpg" alt="Welcome Image">
+	<img src="pexels-alleksana-7430711.jpg" alt="Welcome Image" width="500" height="600">
   <div class="content">Hello World!</div>
   <div class="footer">
     <h4>About Me | Contact | Copyright 2021</h4>
