--- a/animation/index.html
+++ b/animation/index.html
@@ -17,6 +17,10 @@
   <div class="content">
 	  <h1>Walk Cycle</h1>
 	  <img src="WalkCycle.jpeg" alt="Walk Cycle">
+	  <video width="320" height="240" controls>
+  <source src="movie.mp4" type="video/mp4">
+  <source src="movie.ogg" type="video/ogg">
+</video>
 	  <a href="https://www.w3schools.com/">Visit W3Schools.com!</a>
 	</div>
   <div class="footer">
