--- a/animation/index.html
+++ b/animation/index.html
@@ -18,8 +18,7 @@
 	  <h1>Walk Cycle</h1>
 	  <img src="WalkCycle.jpeg" alt="Walk Cycle">
 	  <video width="320" height="240" controls>
-  <source src="movie.mp4" type="video/mp4">
-  <source src="movie.ogg" type="video/ogg">
+  <source src="Untitled-1.fla" type="Untitled-1/fla">
 </video>
 	  <a href="https://www.w3schools.com/">Visit W3Schools.com!</a>
 	</div>
