--- a/animation/index.html
+++ b/animation/index.html
@@ -16,7 +16,7 @@
   </div>
   <div class="content">
 	  <h1>Walk Cycle</h1>
-	  <img src="WalkCycle.jpeg" alt="Walk Cycle">
+	  <img src="WalkCycle.jpeg" alt="Walk Cycle"</img>
 	  <video width="320" height="240" controls>
   <source src="Untitled-1.fla" type="Untitled-1/fla">
 </video>
