--- a/animation/index.html
+++ b/animation/index.html
@@ -16,7 +16,7 @@
   </div>
   <div class="content">
 	  <h1>Walk Cycle</h1>
-	  <img src="WalkCycle.jpeg" alt="Walk Cycle"</img>
+	  <img src="WalkCycle.jpg" alt="Walk Cycle"</img>
 	  <a href="https://www.w3schools.com/">Visit W3Schools.com!</a>
 	</div>
   <div class="footer">
