--- a/animation/index.html
+++ b/animation/index.html
@@ -16,7 +16,7 @@
   </div>
   <div class="content">
 	  <h1>Walk Cycle</h1>
-	  <img src="WalkCycle.jpg" alt="Walk Cycle"width="960" height="560 </img>
+	  <img src="WalkCycle.jpg" alt="Walk Cycle"width="960" height="560"</img>
 	  <a href="file:///Users/9654924/Documents/9654924/Walk%20Cycle/WalkCylce-1.html">Walk Cycle!</a>
 	</div>
   <div class="footer">
