--- a/video/index.html
+++ b/video/index.html
@@ -14,8 +14,10 @@
   <div class="nav">
     <h3><a href="../index.html">Home</a> | <a href="index.html">Video</a> | <a href="../animation/index.html">Animation</a> </h3>
   </div>
-  <div class="content">Hello World!</div>
-  <div class="footer">
+  <h1>Nike</h1>
+	  <img src="WalkCycle.jpg" alt="Walk Cycle"width="960" height="560"</img>
+	  <a href="../WalkCycle-1.html">Walk Cycle</a>
+	</div>
     <h4>About Me | Contact | Copyright 2021</h4>
   </div>
 </div>
