--- a/video/index.html
+++ b/video/index.html
@@ -15,8 +15,10 @@
     <h3><a href="../index.html">Home</a> | <a href="index.html">Video</a> | <a href="../animation/index.html">Animation</a> </h3>
   </div>
   <h1>Nike</h1>
-	  <img src="WalkCycle.jpg" alt="Walk Cycle"width="960" height="560"</img>
-	  <a href="../WalkCycle-1.html">Walk Cycle</a>
+	  <img src="Nike.jpeg" alt="Nike"width="960" height="560"</img>
+	  <video width="320" height="240" controls>
+  <source src="My Movie 1.mov" type="video/mp4">
+</video>
 	</div>
     <h4>About Me | Contact | Copyright 2021</h4>
   </div>
