--- a/video/index.html
+++ b/video/index.html
@@ -20,6 +20,7 @@
   <source src="My Movie 1.mov" type="video/mp4">
 </video>
 	</div>
+	 <div class="footer">
     <h4>About Me | Contact | Copyright 2021</h4>
   </div>
 </div>
