--- a/video/index.html
+++ b/video/index.html
@@ -14,8 +14,8 @@
   <div class="nav">
     <h3><a href="../index.html">Home</a> | <a href="index.html">Video</a> | <a href="../animation/index.html">Animation</a> </h3>
   </div>
-  <h1>Nike</h1>
-	  <img src="Nike.jpeg" alt="Nike"width="960" height="560"</img>
+<div class="content">
+ 	 <h1>Nike</h1>
 	  <video width="320" height="240" controls>
   <source src="My Movie 1.mov" type="video/mp4">
 </video>
